--- a/content/introduction.tex
+++ b/content/introduction.tex
@@ -1,3 +1,9 @@
 \section{Introduction}
 
-This is introduction \shortcite{example2002}.
+Neutrino is one of the elementary particles in the fermion group and were theoretically invented in 1930 by Pauli to preserve energy–momentum conservation. It is a neutral particle which only has a very small mass and is only affected by gravitation and weak interaction.  Neutrinos are known to be the most abundant particles in the universe after photon with a density of approximately \SI{330}{\per\centi\meter\cubed} pan universe \shortcite{athar-2020}. All these neutrinos come from a lot of sources, they are produced inside the sun, the earth, the entire atmosphere, during the birth, collision, and death of stars and huge flux of neutrinos is emitted during supernovae explosions. In stars like our sun the amount of neutrinos produce is very abundant as it is part of the fission process through beta decay and electron capture, for example in the proton-proton chain reaction where 2 ${}^{1}\mathrm H$ fuses into one ${}^{2}\mathrm H$ converting one of the protons into neutron \shortcite{iliadis-2007}. And due to it having small collision cross-section most of these neutrinos go out of the sun without being blocked going out to every direction, a lot of them pass through us. Neutrino flux is the measure of the number of neutrinos flowing through, on earth we use detectors such as the Super Kamiokande.
+
+Machine learning is a technique that improves system performance by learning from experience via computational means \shortcite{zhou-2021}. In physics, especially through recent decades, machine learning has taken its roots, especially in statistical analysis with a large amount of data. For example, it has been used in processing satellite data in atmospheric physics, in weather forecasts, predicting the behavior of systems of many particles, discovering functional materials and generating new organic molecules \shortcite{rodrigues-2023}.
+
+We do have data for solar neutrinos from the sun which is a low mass stellar model from various of detectors from earth. However, for stars far away we must estimate the neutrino flux since there is no method to directly detect the neutrino. There are some theoretical calculations that can be done to estimate the neutrino flux but, in this research, we plan to use machine learning to do the estimation.
+
+
