--- a/content/problem-questions.tex
+++ b/content/problem-questions.tex
@@ -1,10 +1,14 @@
 \subsection{Problem Statement}
+Neutrinos are present in huge quantities owing to various astrophysical phenomena such as those in a stellar medium like the Sun. Although solar neutrino flux is able to be measured on the Earth by using a detector like Super Kamiokande, neutrinos emitted from distant stars and the physics of their detection still presents a problem because of the difficulty in interaction and the detection of such distant and sparse interactions by current technology. There is no proper means of detecting neutrino radiation from stellar sources at the present time, though theorists continue to make predictions based on elaborate computations.
+ 
+To address these issues, machine learning approaches, which are particularly efficient when it comes to complex data processing tasks and prediction problems located in various physics, would be one of the available options. This study aims to solve the problem by estimating the neutrino flux from a low mass stellar model through the use of a machine learning approach. Here we will try to construct and train a supervised machine learning model aimed at predicting neutrino flux from stars which are not accessible by direct observation, utilizing available solar neutrino flux data and theoretical models.
 
-Example.
 
 \subsection{Research Questions}
 
 The research aims to answer the following questions:
 \begin{enumerate}
-	\item Example.
+	\item What is the neutrino flux production beyond the Standard Solar Model in low mass stars?
+	\item Is machine learning able to give the best estimate in the current solar neutrino productions and what is the limit when extended to beyond the Standard Solar Model? 
+	
 \end{enumerate}
