--- a/main.tex
+++ b/main.tex
@@ -25,9 +25,9 @@
 \counterwithin{figure}{section}
 \counterwithin{table}{section}
 
-\usepackage{graphicx, setspace, multicol, tikz, fancyhdr}
+\usepackage{graphicx, setspace, multicol, booktabs, array, tikz, fancyhdr}
 \usepackage{caption, subcaption, float, enumitem, blindtext}
-\usepackage{physics, siunitx}
+\usepackage{physics, siunitx, flowchart}
 \usepackage[]{apacite}
 
 \fancyhead{}
@@ -47,11 +47,11 @@
 \setlength{\floatsep}{1cm plus 1.0pt minus 1.0pt}
 
 \gdef\date{\today}
-\gdef\title{EXAMPLE TITLE}
-\gdef\titleMS{TAJUK CONTOH}
-\gdef\author{EXAMPLE AUTHOR}
-\gdef\matricno{XXXXXXXX}
-\gdef\IC{(XXXXXX-XX-XXXX)}
+\gdef\title{ESTIMATING NEUTRINO FLUX FROM LOW MASS STELLAR MODEL USING MACHINE LEARNING TECHNIQUE}
+\gdef\titleMS{MENGANGGARKAN FLUKS NEUTRINO DARIPADA MODEL BINTANG JISIM RENDAH MENGGUNAKAN TEKNIK PEMBELAJARAN MESIN}
+\gdef\author{IRFAN MUQRI BIN ABD RAHMAN}
+\gdef\matricno{U2103688}
+\gdef\IC{(021214-01-0451)}
 
 \begin{document}
 \startcontents[default]
