--- a/ref.bib
+++ b/ref.bib
@@ -1,12 +1,173 @@
-@article{example2002,
-  title = {Example of Reference},
-  author = {Example Author},
-  year = {2002},
-  month = dec,
-  journal = {Example Journal},
-  volume = {212},
-  pages = {171--182},
-  issn = {0304-4238},
-  doi = {10.1016/j.scienta.2016.09},
-  urldate = {2024-10-09}
+@article{athar-2022,
+	author = {Athar, M. Sajjad and Barwick, Steven W. and Brunner, Thomas and Cao, Jun and Danilov, Mikhail and Inoue, Kunio and Kajita, Takaaki and Kowalski, Marek and Lindner, Manfred and Long, Kenneth R. and Palanque-Delabrouille, Nathalie and Rodejohann, Werner and Schellman, Heidi and Scholberg, Kate and Seo, Seon-Hee and Smith, Nigel J.T. and Winter, Walter and Zeller, Geralyn P. and Funchal, Renata Zukanovich},
+	journal = {Progress in Particle and Nuclear Physics},
+	month = {2},
+	pages = {103947},
+	title = {{Status and perspectives of neutrino physics}},
+	volume = {124},
+	year = {2022},
+	doi = {10.1016/j.ppnp.2022.103947},
+	url = {https://doi.org/10.1016/j.ppnp.2022.103947},
+}
+@book{iliadis-2007,
+	author = {Iliadis, Christian},
+	month = {4},
+	publisher = {John Wiley \& Sons},
+	title = {{Nuclear Physics of Stars}},
+	year = {2007},
+}
+@book{athar-2020,
+	author = {Athar, M. Sajjad and Singh, S. K.},
+	month = {12},
+	publisher = {Cambridge University Press},
+	title = {{The Physics of Neutrino Interactions}},
+	year = {2020},
+}
+@article{vitagliano-2020,
+	author = {Vitagliano, Edoardo and Tamborra, Irene and Raffelt, Georg},
+	journal = {Reviews of Modern Physics},
+	month = {12},
+	number = {4},
+	title = {{Grand unified neutrino spectrum at Earth: Sources and spectral components}},
+	volume = {92},
+	year = {2020},
+	doi = {10.1103/revmodphys.92.045006},
+	url = {https://doi.org/10.1103/revmodphys.92.045006},
+}
+@book{zhou-2021,
+	author = {Zhou, Zhi-Hua},
+	month = {1},
+	title = {{Machine learning}},
+	year = {2021},
+	doi = {10.1007/978-981-15-1967-3},
+	url = {https://doi.org/10.1007/978-981-15-1967-3},
+}
+@article{rodrigues-2023,
+	author = {Rodrigues, Francisco A.},
+	journal = {EPL (Europhysics Letters)},
+	month = {10},
+	number = {2},
+	pages = {22001},
+	title = {{Machine learning in physics: A short guide}},
+	volume = {144},
+	year = {2023},
+	doi = {10.1209/0295-5075/ad0575},
+	url = {https://doi.org/10.1209/0295-5075/ad0575},
+}
+@book{krane-1991,
+	author = {Krane, Kenneth S.},
+	month = {1},
+	publisher = {John Wiley \& Sons},
+	title = {{Introductory Nuclear Physics}},
+	year = {1991},
+}
+@article{rosso-2018,
+	author = {Rosso, A. Gallo and Mascaretti, C. and Palladino, A. and Vissani, F.},
+	journal = {The European Physical Journal Plus},
+	month = {7},
+	number = {7},
+	title = {{Introduction to neutrino astronomy*}},
+	volume = {133},
+	year = {2018},
+	doi = {10.1140/epjp/i2018-12143-6},
+	url = {https://doi.org/10.1140/epjp/i2018-12143-6},
+}
+@article{Farag_2020,
+doi = {10.3847/1538-4357/ab7f2c},
+url = {https://dx.doi.org/10.3847/1538-4357/ab7f2c},
+year = {2020},
+month = {apr},
+publisher = {The American Astronomical Society},
+volume = {893},
+number = {2},
+pages = {133},
+author = {Ebraheem Farag and F. X. Timmes and Morgan Taylor and Kelly M. Patton and R. Farmer},
+title = {On Stellar Evolution in a Neutrino Hertzsprung–Russell Diagram},
+journal = {The Astrophysical Journal},
+abstract = {We explore the evolution of a select grid of solar metallicity stellar models from their pre-main-sequence phase to near their final fates in a neutrino Hertzsprung–Russell diagram, where the neutrino luminosity replaces the traditional photon luminosity. Using a calibrated MESA solar model for the solar neutrino luminosity ( ·  ×  1031 erg s−1) as a normalization, we identify ≃0.3 MeV electron neutrino emission from helium burning during the helium flash (peak , flux  (10 pc/d)2 cm−2 s−1 for a star located at a distance of d parsec, timescale ≃3 days) and the thermal pulse (peak , flux  × 107 (10 pc/d)2 cm−2 s−1, timescale ≃0.1 yr) phases of evolution in low-mass stars as potential probes for stellar neutrino astronomy. We also delineate the contribution of neutrinos from nuclear reactions and thermal processes to the total neutrino loss along the stellar tracks in a neutrino Hertzsprung–Russell diagram. We find, broadly but with exceptions, that neutrinos from nuclear reactions dominate whenever hydrogen and helium burn, and that neutrinos from thermal processes dominate otherwise.}
+}
+@article{ADDAZI2022103948,
+title = {Quantum gravity phenomenology at the dawn of the multi-messenger era—A review},
+journal = {Progress in Particle and Nuclear Physics},
+volume = {125},
+pages = {103948},
+year = {2022},
+issn = {0146-6410},
+doi = {https://doi.org/10.1016/j.ppnp.2022.103948},
+url = {https://www.sciencedirect.com/science/article/pii/S0146641022000096},
+author = {A. Addazi and J. Alvarez-Muniz and R. {Alves Batista} and G. Amelino-Camelia and V. Antonelli and M. Arzano and M. Asorey and J.-L. Atteia and S. Bahamonde and F. Bajardi and A. Ballesteros and B. Baret and D.M. Barreiros and S. Basilakos and D. Benisty and O. Birnholtz and J.J. Blanco-Pillado and D. Blas and J. Bolmont and D. Boncioli and P. Bosso and G. Calcagni and S. Capozziello and J.M. Carmona and S. Cerci and M. Chernyakova and S. Clesse and J.A.B. Coelho and S.M. Colak and J.L. Cortes and S. Das and V. D’Esposito and M. Demirci and M.G. {Di Luca} and A. {di Matteo} and D. Dimitrijevic and G. Djordjevic and D. Dominis Prester and A. Eichhorn and J. Ellis and C. Escamilla-Rivera and G. Fabiano and S.A. Franchino-Viñas and A.M. Frassino and D. Frattulillo and S. Funk and A. Fuster and J. Gamboa and A. Gent and L.Á. Gergely and M. Giammarchi and K. Giesel and J.-F. Glicenstein and J. Gracia-Bondía and R. Gracia-Ruiz and G. Gubitosi and E.I. Guendelman and I. Gutierrez-Sagredo and L. Haegel and S. Heefer and A. Held and F.J. Herranz and T. Hinderer and J.I. Illana and A. Ioannisian and P. Jetzer and F.R. Joaquim and K.-H. Kampert and A. Karasu Uysal and T. Katori and N. Kazarian and D. Kerszberg and J. Kowalski-Glikman and S. Kuroyanagi and C. Lämmerzahl and J. Levi Said and S. Liberati and E. Lim and I.P. Lobo and M. López-Moya and G.G. Luciano and M. Manganaro and A. Marcianò and P. Martín-Moruno and Manel Martinez and Mario Martinez and H. Martínez-Huerta and P. Martínez-Miravé and M. Masip and D. Mattingly and N. Mavromatos and A. Mazumdar and F. Méndez and F. Mercati and S. Micanovic and J. Mielczarek and A.L. Miller and M. Milosevic and D. Minic and L. Miramonti and V.A. Mitsou and P. Moniz and S. Mukherjee and G. Nardini and S. Navas and M. Niechciol and A.B. Nielsen and N.A. Obers and F. Oikonomou and D. Oriti and C.F. Paganini and S. Palomares-Ruiz and R. Pasechnik and V. Pasic and C. {Pérez de los Heros} and C. Pfeifer and M. Pieroni and T. Piran and A. Platania and S. Rastgoo and J.J. Relancio and M.A. Reyes and A. Ricciardone and M. Risse and M.D. Rodriguez Frias and G. Rosati and D. Rubiera-Garcia and H. Sahlmann and M. Sakellariadou and F. Salamida and E.N. Saridakis and P. Satunin and M. Schiffer and F. Schüssler and G. Sigl and J. Sitarek and J. Solà Peracaula and C.F. Sopuerta and T.P. Sotiriou and M. Spurio and D. Staicova and N. Stergioulas and S. Stoica and J. Strišković and T. Stuttard and D. Sunar Cerci and Y. Tavakoli and C.A. Ternes and T. Terzić and T. Thiemann and P. Tinyakov and M.D.C. Torri and M. Tórtola and C. Trimarelli and T. Trześniewski and A. Tureanu and F.R. Urban and E.C. Vagenas and D. Vernieri and V. Vitagliano and J.-C. Wallet and J.D. Zornoza},
+keywords = {Lorentz invariance violation and deformation, Gamma-ray astronomy, Cosmic neutrinos, Ultra-high-energy cosmic rays, Gravitational waves},
+abstract = {The exploration of the universe has recently entered a new era thanks to the multi-messenger paradigm, characterized by a continuous increase in the quantity and quality of experimental data that is obtained by the detection of the various cosmic messengers (photons, neutrinos, cosmic rays and gravitational waves) from numerous origins. They give us information about their sources in the universe and the properties of the intergalactic medium. Moreover, multi-messenger astronomy opens up the possibility to search for phenomenological signatures of quantum gravity. On the one hand, the most energetic events allow us to test our physical theories at energy regimes which are not directly accessible in accelerators; on the other hand, tiny effects in the propagation of very high energy particles could be amplified by cosmological distances. After decades of merely theoretical investigations, the possibility of obtaining phenomenological indications of Planck-scale effects is a revolutionary step in the quest for a quantum theory of gravity, but it requires cooperation between different communities of physicists (both theoretical and experimental). This review, prepared within the COST Action CA18108 “Quantum gravity phenomenology in the multi-messenger approach”, is aimed at promoting this cooperation by giving a state-of-the art account of the interdisciplinary expertise that is needed in the effective search of quantum gravity footprints in the production, propagation and detection of cosmic messengers.}
+}
+@article{barenboim-2003,
+	author = {Barenboim, Gabriela and Quigg, Chris},
+	journal = {Physical review. D. Particles, fields, gravitation, and cosmology/Physical review. D. Particles and fields},
+	month = {4},
+	number = {7},
+	title = {{Neutrino observatories can characterize cosmic sources and neutrino properties}},
+	volume = {67},
+	year = {2003},
+	doi = {10.1103/physrevd.67.073024},
+	url = {https://doi.org/10.1103/physrevd.67.073024},
+}
+@book{giunti-2007,
+	author = {Giunti, Carlo and Kim, Chung W.},
+	month = {3},
+	publisher = {Oxford University Press},
+	title = {{Fundamentals of Neutrino Physics and Astrophysics}},
+	year = {2007},
+}
+@article{niu-2019,
+	author = {Niu, Z. M. and Liang, H. Z. and Sun, B. H. and Long, W. H. and Niu, Y. F.},
+	journal = {Physical review. C},
+	month = {6},
+	number = {6},
+	title = {{Predictions of nuclear $\beta$-decay half-lives with machine learning and their impact on r -process nucleosynthesis}},
+	volume = {99},
+	year = {2019},
+	doi = {10.1103/physrevc.99.064307},
+	url = {https://doi.org/10.1103/physrevc.99.064307},
+}
+@article{katz-2011,
+	author = {Katz, U.F. and Spiering, Ch.},
+	journal = {Progress in Particle and Nuclear Physics},
+	month = {12},
+	number = {3},
+	pages = {651--704},
+	title = {{High-energy neutrino astrophysics: Status and perspectives}},
+	volume = {67},
+	year = {2011},
+	doi = {10.1016/j.ppnp.2011.12.001},
+	url = {https://doi.org/10.1016/j.ppnp.2011.12.001},
+}
+@article{bahcall-1996,
+	author = {Bahcall, John N. and Ulmer, Andrew},
+	journal = {Physical review. D. Particles, fields, gravitation, and cosmology/Physical review. D. Particles and fields},
+	month = {4},
+	number = {8},
+	pages = {4202--4210},
+	title = {{Temperature dependence of solar neutrino fluxes}},
+	volume = {53},
+	year = {1996},
+	doi = {10.1103/physrevd.53.4202},
+	url = {https://doi.org/10.1103/physrevd.53.4202},
+}
+@article{pedregosafabian-2011,
+	author = {PedregosaFabian and VaroquauxGaël and GramfortAlexandre and MichelVincent and ThirionBertrand and GriselOlivier and BlondelMathieu and PrettenhoferPeter and WeissRon and DubourgVincent and VanderplasJake and PassosAlexandre and CournapeauDavid and BrucherMatthieu and PerrotMatthieu and DuchesnayÉdouard},
+	journal = {Journal of Machine Learning Research},
+	month = {11},
+	title = {{SciKit-Learn: Machine Learning in Python}},
+	year = {2011},
+	doi = {10.5555/1953048.2078195},
+	url = {https://dl.acm.org/citation.cfm?id=1953048.2078195},
+}
+@book{hope-2019,
+	author = {Hope, Thomas M.H.},
+	booktitle = {Elsevier eBooks},
+	month = {11},
+	pages = {67--81},
+	title = {{Linear regression}},
+	year = {2019},
+	doi = {10.1016/b978-0-12-815739-8.00004-3},
+	url = {https://doi.org/10.1016/b978-0-12-815739-8.00004-3},
 }
