--- a/content/objectives-relevance.tex
+++ b/content/objectives-relevance.tex
@@ -2,9 +2,15 @@
 
 The research aims to achieve the following objectives:
 \begin{enumerate}
-	\item Example.
+	\item To train using machine learning techniques to estimate neutrino flux that can mimic real flux measured
+	\item To test the accuracy of linear regression from the machine learning  in  estimating neutrino flux
+	
 \end{enumerate}
 
 \subsection{Relevance of Research}
 
-Example.
+\begin{enumerate}
+	\item Provide new understanding in the neutrino flux or production beyond Standard Solar Model
+	\item To test the robustness of the linear regression in handling the neutrino flux calculation from low mass stars grid. 
+	
+\end{enumerate}
